# cmakeProc

./: CMakeLists.txt  readme.txt
main/: CMakeLists.txt
script/: build.bat  build_and_run.bat  clean.bat  run.bat
src/: CMakeLists.txt
src/study_gtest/: Add.cpp  CMakeLists.txt
test/: CMakeLists.txt  TestAdd.cpp
